--- a/Example/AZTestLayout/Base.lproj/Main.storyboard
+++ b/Example/AZTestLayout/Base.lproj/Main.storyboard
@@ -19,21 +19,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" prefetchingEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YER-8k-FBe">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewLayout key="collectionViewLayout" id="3Hs-f9-CNg" customClass="AZSafariCollectionViewLayout" customModule="AZTestLayout" customModuleProvider="target">
-                                    <userDefinedRuntimeAttributes>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="itemGap">
-                                            <real key="value" value="100"/>
-                                        </userDefinedRuntimeAttribute>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="height">
-                                            <real key="value" value="375"/>
-                                        </userDefinedRuntimeAttribute>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="angleOfRotation">
-                                            <real key="value" value="-35"/>
-                                        </userDefinedRuntimeAttribute>
-                                    </userDefinedRuntimeAttributes>
-                                </collectionViewLayout>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="MDM-L8-nWR">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
                                 <cells/>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="h90-tj-Pcv"/>
@@ -44,9 +37,9 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="YER-8k-FBe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="GHN-kc-hPe"/>
-                            <constraint firstItem="YER-8k-FBe" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="JMZ-IV-CQ2"/>
+                            <constraint firstItem="YER-8k-FBe" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="JMZ-IV-CQ2"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YER-8k-FBe" secondAttribute="trailing" id="ZbL-nr-jAe"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="YER-8k-FBe" secondAttribute="bottom" id="tgR-GQ-tBY"/>
+                            <constraint firstAttribute="bottom" secondItem="YER-8k-FBe" secondAttribute="bottom" id="tgR-GQ-tBY"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
