--- a/Example/AZTestLayout/TabCollectionViewCell.xib
+++ b/Example/AZTestLayout/TabCollectionViewCell.xib
@@ -13,26 +13,26 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TabCollectionViewCell" id="gTV-IL-0wX" customClass="TabCollectionViewCell" customModule="AZTestLayout" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="234" height="187"/>
+            <rect key="frame" x="0.0" y="0.0" width="372" height="360"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="234" height="187"/>
+                <rect key="frame" x="0.0" y="0.0" width="372" height="360"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SsC-2H-ahl">
-                        <rect key="frame" x="0.0" y="0.0" width="234" height="187"/>
+                        <rect key="frame" x="0.0" y="0.0" width="372" height="360"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NVN-9w-CaA">
-                                <rect key="frame" x="96" y="16" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <webView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4ib-Kp-C9i">
+                                <rect key="frame" x="0.0" y="0.0" width="372" height="360"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </webView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="NVN-9w-CaA" firstAttribute="top" secondItem="SsC-2H-ahl" secondAttribute="top" constant="16" id="Qof-La-TxD"/>
-                            <constraint firstItem="NVN-9w-CaA" firstAttribute="centerX" secondItem="SsC-2H-ahl" secondAttribute="centerX" id="mJ6-sl-M6i"/>
+                            <constraint firstAttribute="trailing" secondItem="4ib-Kp-C9i" secondAttribute="trailing" id="97V-Lb-pAe"/>
+                            <constraint firstAttribute="bottom" secondItem="4ib-Kp-C9i" secondAttribute="bottom" id="LS2-MY-xqi"/>
+                            <constraint firstItem="4ib-Kp-C9i" firstAttribute="top" secondItem="SsC-2H-ahl" secondAttribute="top" id="ZrR-uc-0hd"/>
+                            <constraint firstItem="4ib-Kp-C9i" firstAttribute="leading" secondItem="SsC-2H-ahl" secondAttribute="leading" id="dK4-sy-kPC"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -44,11 +44,12 @@
                 <constraint firstAttribute="bottom" secondItem="SsC-2H-ahl" secondAttribute="bottom" id="kqW-Yg-cbi"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="234" height="187"/>
+            <size key="customSize" width="372" height="360"/>
             <connections>
                 <outlet property="bgView" destination="SsC-2H-ahl" id="Cli-CW-RbF"/>
+                <outlet property="webView" destination="4ib-Kp-C9i" id="kqU-Oz-ksf"/>
             </connections>
-            <point key="canvasLocation" x="11" y="45"/>
+            <point key="canvasLocation" x="-6" y="17"/>
         </collectionViewCell>
     </objects>
 </document>
